--- a/MonsterMQTT/MonsterMQTT.uplugin
+++ b/MonsterMQTT/MonsterMQTT.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0",
 	"FriendlyName": "MonsterMQTT",
 	"Description": "",
-	"Category": "Other",
+	"Category": "MQTT",
 	"CreatedBy": "",
 	"CreatedByURL": "",
 	"DocsURL": "",
